@@ -23,7 +23,7 @@ my $config_base = <<END;
 END
 
 
-func fake_confstring ($extra = '')
+func fake_confstring ($extra //= '')
 {
 	return $config_base . $extra;
 }
@@ -31,12 +31,11 @@ func fake_confstring ($extra = '')
 
 func fake_config (%args)
 {
-	my $confstring = fake_confstring();
-	if (exists $args{'conf'})
-	{
-		$confstring = fake_confstring($args{'conf'});
-		delete $args{'conf'};
-	}
+	my $conf = delete $args{'conf'};
+	my $no_policy = delete $args{'no-policy'};
+
+	my $confstring = fake_confstring($conf);
+	$confstring =~ s/^\s*ProjectPolicy\b.*?$//m if $no_policy;
 
 	my $class = 'App::VC::Config';
 	my $fake_app = bless {}, 'App::VC';
@@ -49,7 +48,7 @@ func fake_config (%args)
 	isa_ok $config, $class, 'test config';
 	is $config->project, 'test', 'test config returns proper project';
 	is $config->vc, 'fake', 'test config returns proper vc';
-	is $config->policy, 'FakePolicy', 'test config returns proper policy';
+	is $config->policy, $no_policy ? undef : 'FakePolicy', 'test config returns proper policy';
 
 	return $config;
 }
